--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,5 +18,14 @@ services:
       timeout: 5s
       retries: 5
 
+  mailhog:
+    image: mailhog/mailhog:latest
+    container_name: all_in_one_mailhog
+    ports:
+      - '1025:1025' # SMTP port
+      - '8025:8025' # Web UI port
+    environment:
+      - MH_STORAGE=memory
+
 volumes:
   postgres_data:
