fix: next-auth environment variable

--- a/.env.local.example
+++ b/.env.local.example
@@ -19,7 +19,7 @@ NEXT_PUBLIC_APP_URL="http://localhost:3000"
 # ===================================
 # NextAuth.js configuration
 NEXTAUTH_URL="http://localhost:3000"
-NEXTAUTH_SECRET="your-development-secret-change-this-in-production"
+AUTH_SECRET="your-development-secret-change-this-in-production"
 
 # Email configuration (for development, using MailHog)
 EMAIL_SERVER_HOST="localhost"
