--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage",
     "test:unit": "vitest run",
-    "test:integration": "dotenv -e .env.test -- vitest run --config vitest.config.integration.ts",
-    "test:e2e": "dotenv -e .env.test -- vitest run --config vitest.config.e2e.ts",
-    "test:all": "pnpm test:unit && pnpm test:integration && pnpm test:e2e",
+    "test:integration": "vitest run --config vitest.config.integration.ts",
+    "test:e2e": "vitest run --config vitest.config.e2e.ts",
+    "test:all": "pnpm test:unit && pnpm test:integration",
     "prepare": "husky",
     "postinstall": "prisma generate || echo 'Prisma generate skipped'",
     "vercel-build": "prisma generate && next build",
